envoy-gateway/gateway-api.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-api
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
