envoy-gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway-api
  listeners:
  - name: http
    protocol: HTTP
    port: 8088
