envoy-gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-gateway-httproute
spec:
  parentRefs:
  - name: envoy-gateway
  # hostnames:
  # - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-svc-frontend
      port: 80
  
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: todo-svc-backend
      port: 5000
      weight: 1
